feat: first release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "rlfit"
-version = "0.1.0"
+version = "0.0.0"
 description = "Fitting reinforcement learning model to behavior data under bandits."
 authors = [
     {name = "Hao Zhu", email = "zhuh@cs.uni-freiburg.de"},
@@ -19,7 +19,7 @@ dependencies = [
 ]
 
 [project.urls]
-repository = "https://github.com/nrgrp/dlfm"
+repository = "https://github.com/nrgrp/rlfit"
 
 [build-system]
 requires = ["hatchling"]
